--- a/src/main/resources/static/forms/template.html
+++ b/src/main/resources/static/forms/template.html
@@ -11,134 +11,135 @@
 </head>
 <body>
 <form class="form-group">
-    <script cam-script type="text/form-script">
-        camForm.on('form-loaded', function () {
-            camForm.variableManager.fetchVariable('FormField_primaryApproval');
-            camForm.variableManager.fetchVariable('FormField_ApprovalNotes');
-            camForm.variableManager.fetchVariable('FormField_secondaryApproval');
-            camForm.variableManager.fetchVariable('FormField_SecondApprovalNotes');
-            // camForm.variableManager.fetchVariable('FormField_InvoiceName');
-            // camForm.variableManager.fetchVariable('FormField_costCenter');
-            // camForm.variableManager.fetchVariable('FormField_amount');
-            // camForm.variableManager.fetchVariable('FormField_submittedBy');
-            // camForm.variableManager.fetchVariable('FormField_description');
-        });
-        camForm.on('variables-restored', function () {
-            $scope.primeApproval = camForm.variableManager.variableValue('FormField_primaryApproval');
-            $scope.primeNotes = camForm.variableManager.variableValue('FormField_ApprovalNotes');
-            $scope.secondApproval = camForm.variableManager.variableValue('FormField_secondaryApproval');
-            $scope.secondNotes = camForm.variableManager.variableValue('FormField_SecondApprovalNotes');
-            // $scope.invoiceName = camForm.variableManager.variableValue('FormField_InvoiceName');
-            // $scope.costCenter = camForm.variableManager.variableValue('FormField_costCenter');
-            // $scope.subAmount = camForm.variableManager.variableValue('FormField_amount');
-            // $scope.submittedBy = camForm.variableManager.variableValue('FormField_submittedBy');
-            // $scope.requestDescription = camForm.variableManager.variableValue('FormField_description');
-            console.log("setting variables to scope");
-        });
-    </script>
-    <div class="row">
-        <div class="col-md-6">
-
-            <ul class="list-group">
-                <li class="list-group-item"><span class="glyphicon glyphicon-send"></span> <b>Primary
-                    Approval: </b>
-                    {{ primeApproval }}
-                </li>
-                <li class="list-group-item"><span class="glyphicon glyphicon-usd"></span><b>Primary Notes: </b>
-                    {{ primeNotes }}
-                </li>
-            </ul>
-
+    <form class="form-group" role="form" name="variablesForm">
+        <script cam-script type="text/form-script">
+            camForm.on('form-loaded', function () {
+                camForm.variableManager.fetchVariable('FormField_primeApprover');
+                camForm.variableManager.fetchVariable('FormField_ApprovalNotes');
+                camForm.variableManager.fetchVariable('FormField_secondApprover');
+                camForm.variableManager.fetchVariable('FormField_SecondApprovalNotes');
+                camForm.variableManager.fetchVariable('FormField_InvoiceName');
+                camForm.variableManager.fetchVariable('FormField_costCenter');
+                camForm.variableManager.fetchVariable('FormField_amount');
+                camForm.variableManager.fetchVariable('FormField_submittedBy');
+                camForm.variableManager.fetchVariable('FormField_description');
+            });
+            camForm.on('variables-restored', function () {
+                $scope.primeApprover = camForm.variableManager.variableValue('FormField_primeApprover');
+                $scope.primeNotes = camForm.variableManager.variableValue('FormField_ApprovalNotes');
+                $scope.secondApprover = camForm.variableManager.variableValue('FormField_secondApprover');
+                $scope.secondNotes = camForm.variableManager.variableValue('FormField_SecondApprovalNotes');
+                $scope.invoiceName = camForm.variableManager.variableValue('FormField_InvoiceName');
+                $scope.costCenter = camForm.variableManager.variableValue('FormField_costCenter');
+                $scope.subAmount = camForm.variableManager.variableValue('FormField_amount');
+                $scope.submittedBy = camForm.variableManager.variableValue('FormField_submittedBy');
+                $scope.requestDescription = camForm.variableManager.variableValue('FormField_description');
+                console.log("setting variables to scope");
+            });
+        </script>
+        <div class="row col-md-12">
+            <div class="col-md-6">
+                <ul class="list-group">
+                    <li class="list-group-item"><span class="glyphicon glyphicon-send"></span> <b>Cost Center: </b>
+                        {{ costCenter }}
+                    </li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-usd"></span><b>Amount: </b>
+                        {{ subAmount }}
+                    </li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <b>Submitted By: </b>
+                        {{ submittedBy }}
+                    </li>
+                    <!--<li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <b>Download-->
+                    <!--Invoice: </b>{{ invoiceName }}-->
+                    <!--</li>-->
+                    <li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <b>Download
+                        Invoice: </b><a cam-file-download="invoiceDocument">
+                        {{ invoiceName }}</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <label for="FormField_description">
+                    <b>Description:</b>
+                </label>
+                <div class="controls">
+                    <textarea class="form-control" cols="50" rows="8"
+                              maxlength="500" type="text" name="FormField_description" readonly
+                              placeholder="Describe the purpose of this invoice">{{ requestDescription }}</textarea>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6">
-
-            <ul class="list-group">
-                <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <b>Secondary
-                    Notes: </b>
-                    {{ secondApproval }}
-                </li>
-                <li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <b>Secondary
-                    Notes: </b>
-                    {{ secondNotes }}
-                </li>
-            </ul>
+        <p></p>
+        <div class="row col-md-12">
+            <div class="col-md-6">
+                <ul class="list-group">
+                    <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <b>Primary
+                        Approval: </b>
+                        {{ primeApprover }}
+                    </li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-comment"></span><b>Primary Notes: </b>
+                        {{ primeNotes }}
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <ul class="list-group">
+                    <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <b>Secondary
+                        Notes: </b>
+                        {{ secondApprover }}
+                    </li>
+                    <li class="list-group-item"><span class="glyphicon glyphicon-comment"></span> <b>Secondary
+                        Notes: </b>
+                        {{ secondNotes }}
+                    </li>
+                </ul>
+            </div>
         </div>
+        <div class="row col-md-3" style="margin: 10px">
+            <div class="form-horizontal">
+                <label for="FormField_DateBilled">
+                    Date of Billing
+                </label>
+                <!--<p class="input-group">-->
+                <span class="glyphicon glyphicon-th"></span>
+                <input type="text"
+                       cam-variable-name="FormField_DateBilled"
+                       cam-variable-type="Date"
+                       class="form-control"
+                       datepicker-popup="yyyy-MM-dd'T'HH:mm:ss"
+                       is-open="dateFieldOpenedFormField_DateBilled"/>
+
+                <span class="input-group-btn">
+                      <button type="button"
+                              class="btn btn-default"
+                              ng-click="openFormField_DateBilled($event)">
+                        <i class="glyphicon glyphicon-calendar"></i>
+                      </button>
+                    </span>
+                </p>
+                <script cam-script type="text/form-script">
+                    $scope.openFormField_DateBilled = function ($event) {
+                        $event.preventDefault();
+                        $event.stopPropagation();
+
+                        $scope.dateFieldOpenedFormField_DateBilled = true;
+                    };
+                </script>
+            </div>
+            <div class="form-horizontal">
+                <label for="FormField_billingNotes">
+                    Billing Notes
+                </label>
+                <textarea class="form-control" name="FormField_billingNotes" cam-variable-type="String"
+                          cam-variable-name="FormField_billingNotes" type="text" cols="50" rows="8"></textarea>
+                <!--<input class="form-control" name="FormField_billingNotes" cam-variable-type="String"-->
+                <!--cam-variable-name="FormField_billingNotes" type="text">-->
+            </div>
+        </div>
+    </form>
+
+    <div class="col-md-12" style="margin-top: 55px">
+        <input type="submit">
     </div>
-    <div class="row" style="margin-top: 5px">
-        <div class="col-md-5" style="margin-left: 5px">
-            <div class="form-group">
-                <label for="FormField_costCenter"><span class="glyphicon glyphicon-send"></span> <b>Cost
-                    Center</b></label>
-                <div class="controls">
-                    <input class="form-control" id="FormField_costCenter" name="FormField_costCenter"
-                           cam-variable-type="String"
-                           cam-variable-name="FormField_costCenter" type="text"
-                           placeholder="Cost Center Number" required>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="FormField_amount"><span class="glyphicon glyphicon-usd"></span>
-                    <b>Amount</b></label>
-                <div class="controls">
-                    <div class="controls">
-                        <input class="form-control" name="FormField_amount" id="FormField_amount"
-                               cam-variable-type="Long"
-                               cam-variable-name="FormField_amount"
-                               type="number"
-                               placeholder="Amount of Invoice"
-                               min="0" step="1"
-                               data-number-to-fixed="2"
-                               data-number-stepfactor="100"
-                               class="form-control currency" required>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="FormField_submittedBy"><span class="glyphicon glyphicon-user"></span> <b>Submitted
-                        By</b></label>
-                    <div class="controls">
-                        <input class="form-control" name="FormField_submittedBy" id="FormField_submittedBy"
-                               cam-variable-type="String"
-                               cam-variable-name="FormField_submittedBy" type="text" value="bob" readonly>
-                    </div>
-                    <label for="FormField_InvoiceName"><span class="glyphicon glyphicon-upload"></span> <b>Attach
-                        Invoice</b></label>
-                    <div class="controls">
-                        <div class="col-md-4">
-                            <input class="form-control" name="FormField_InvoiceName" id="FormField_InvoiceName"
-                                   cam-variable-type="String"
-                                   cam-variable-name="FormField_InvoiceName" type="text" maxlength="20"
-                                   placeholder="Short Name of Invoice" required>
-                            <input type="file" class="form-control-file border"
-                                   cam-variable-name="invoiceDocument" id="invoiceDocument" name="invoiceDocument"
-                                   cam-variable-type="File">
-                            <!--cam-max-filesize="10000000" />-->
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="FormField_description"><span class="glyphicon glyphicon-comment"></span>
-                    <b>Description</b></label>
-                <div class="controls">
-                    <textarea class="form-control" cam-variable-type="String"
-                              cam-variable-name="FormField_description" name="FormField_description"
-                              id="FormField_description" cols="25" rows="8"
-                              maxlength="500" type="text"
-                              placeholder="Describe the purpose of this invoice" required></textarea>
-                </div>
-                <label for="FormField_withdraw">Withdraw Request</label>
-                <input class="form-control" name="FormField_withdraw" cam-variable-type="Boolean"
-                       cam-variable-name="FormField_withdraw" type="checkbox"/>
-            </div>
-        </div>
-    </div>
-</form>
-
-<div class="col-md-12" style="margin-top: 55px">
-    <input type="submit">
-</div>
 </body>
 </html>
