--- a/src/main/resources/static/forms/start.html
+++ b/src/main/resources/static/forms/start.html
@@ -1,4 +1,4 @@
-           <form role="form" name="form">
+           <form role="form" name="form" method="POST">
                <div class="form-group">
                    <label >Your Favorite Color</label>
                    <select required
