fix of sonar bug

--- a/src/main/resources/static/forms/cca/cca-ar-process.html
+++ b/src/main/resources/static/forms/cca/cca-ar-process.html
@@ -92,7 +92,7 @@
 <!--                </label>-->
 <!--                &lt;!&ndash;<p class="input-group">&ndash;&gt;-->
 <!--                &lt;!&ndash;<span class="glyphicon glyphicon-th"></span>&ndash;&gt;-->
-                <label for="FormField_Completed"><b>Is this completed?</b></label>
+                <label for="FormField_Completed"><strong>Is this completed?</strong></label>
                 <input id="FormField_secondaryApproval" class="form-control" name="FormField_Completed"
                        cam-variable-type="Boolean"
                        cam-variable-name="FormField_Completed" type="checkbox" placeholder="Check if complete">
