--- a/src/main/resources/static/forms/cca/cca-approval-primary.html
+++ b/src/main/resources/static/forms/cca/cca-approval-primary.html
@@ -20,20 +20,18 @@
         <div class="col-md-6">
 
             <ul class="list-group">
-                <li class="list-group-item"><span class="glyphicon glyphicon-send"></span> <b>Cost Center: </b>
+                <li class="list-group-item"><span class="glyphicon glyphicon-send"></span> <strong>Cost Center: </strong>
                     {{ costCenter }}
                 </li>
-                <li class="list-group-item"><span class="glyphicon glyphicon-usd"></span><b>Amount: </b>
+                <li class="list-group-item"><span class="glyphicon glyphicon-usd"></span><strong>Amount: </strong>
                     {{ subAmount }}
                 </li>
-                <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <b>Submitted By: </b>
+                <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <strong>Submitted By: </strong>
                     {{ submittedBy }}
                 </li>
-                <!--<li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <b>Download-->
-                <!--Invoice: </b>{{ invoiceName }}-->
-                <!--</li>-->
-                <li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <b>Download
-                    Invoice: </b><a cam-file-download="invoiceDocument">
+
+                <li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <strong>Download
+                    Invoice: </strong><a cam-file-download="invoiceDocument">
                     {{ invoiceName }}</a>
                 </li>
             </ul>
