--- a/src/main/resources/static/forms/cca/cca-approval-secondary.html
+++ b/src/main/resources/static/forms/cca/cca-approval-secondary.html
@@ -29,27 +29,24 @@
     <div class="row col-md-12">
         <div class="col-md-6">
             <ul class="list-group">
-                <li class="list-group-item"><span class="glyphicon glyphicon-send"></span> <b>Cost Center: </b>
+                <li class="list-group-item"><span class="glyphicon glyphicon-send"></span> <strong>Cost Center: </strong>
                     {{ costCenter }}
                 </li>
-                <li class="list-group-item"><span class="glyphicon glyphicon-usd"></span><b>Amount: </b>
+                <li class="list-group-item"><span class="glyphicon glyphicon-usd"></span><strong>Amount: </strong>
                     {{ subAmount }}
                 </li>
-                <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <b>Submitted By: </b>
+                <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <strong>Submitted By: </strong>
                     {{ submittedBy }}
                 </li>
-                <!--<li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <b>Download-->
-                <!--Invoice: </b>{{ invoiceName }}-->
-                <!--</li>-->
-                <li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <b>Download
-                    Invoice: </b><a cam-file-download="invoiceDocument">
+                <li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <strong>Download
+                    Invoice: </strong><a cam-file-download="invoiceDocument">
                     {{ invoiceName }}</a>
                 </li>
             </ul>
         </div>
         <div class="col-md-6">
             <label for="FormField_description">
-                <b>Description:</b>
+                <strong>Description:</strong>
             </label>
             <div class="controls">
                     <textarea class="form-control" cols="50" rows="8"
@@ -62,62 +59,21 @@
     <div class="row col-md-12">
         <div class="col-md-6">
             <ul class="list-group">
-                <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <b>Primary
-                    Approver: </b>
+                <li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <strong>Primary
+                    Approver: </strong>
                     {{ primeApprover }}
                 </li>
-                <li class="list-group-item"><span class="glyphicons glyphicons-comments"></span><b>Primary Notes: </b>
+                <li class="list-group-item"><span class="glyphicons glyphicons-comments"></span><strong>Primary Notes: </strong>
                     {{ primeNotes }}
                 </li>
             </ul>
         </div>
-        <!--<div class="col-md-6">-->
-            <!--<ul class="list-group">-->
-                <!--<li class="list-group-item"><span class="glyphicon glyphicon-user"></span> <b>Secondary-->
-                    <!--Approver: </b>-->
-                    <!--{{ secondApprover }}-->
-                <!--</li>-->
-                <!--<li class="list-group-item"><span class="glyphicon glyphicon-download"></span> <b>Secondary-->
-                    <!--Notes: </b>-->
-                    <!--{{ secondNotes }}-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</div>-->
     </div>
-    <!--<div class="row col-md-12" style="margin-top: 10px">-->
-    <!--<div class="col-md-5">-->
-    <!--<div class="form-group">-->
-    <!--<label for="FormField_secondaryApproval"><b>This invoice is greater than cost center owners approval-->
-    <!--level. Do you approve this invoice to be paid?</b></label>-->
-    <!--<input id="FormField_secondaryApproval" class="form-control" name="FormField_secondaryApproval"-->
-    <!--cam-variable-type="Boolean"-->
-    <!--cam-variable-name="FormField_secondaryApproval" type="checkbox"-->
-    <!--placeholder="Check to approve">-->
 
-    <!--<label for="FormField_secondApprover">-->
-    <!--Reviewed By-->
-    <!--</label>-->
-    <!--<input class="form-control" name="FormField_secondApprover" cam-variable-type="String"-->
-    <!--cam-variable-name="FormField_secondApprover" type="text" readonly>-->
-    <!--</div>-->
-    <!--<div class="col-md-6">-->
-    <!--<div class="form-group">-->
-    <!--<label for="FormField_SecondApprovalNotes"><span class="glyphicons glyphicons-comments"></span><b>Review-->
-    <!--Comment</b></label>-->
-    <!--<div class="controls">-->
-    <!--<textarea id="FormField_SecondApprovalNotes" name="FormField_SecondApprovalNotes"-->
-    <!--cam-variable-type="String"-->
-    <!--cam-variable-name="FormField_SecondApprovalNotes" type="text" cols="50" rows="8"-->
-    <!--maxlength="500"-->
-    <!--placeholder="Approval or rejection comment" required></textarea>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
     <div class="row" style="margin-top: 10px">
         <div class="col-md-6">
-            <label for="FormField_secondaryApproval"><b>As Cost Center Owner do you approve this
-                invoice?</b></label>
+            <label for="FormField_secondaryApproval"><strong>As Cost Center Owner do you approve this
+                invoice?</strong></label>
             <input id="FormField_secondaryApproval" class="form-control" name="FormField_secondaryApproval"
                    cam-variable-type="Boolean"
                    cam-variable-name="FormField_secondaryApproval" type="checkbox" placeholder="Check to approve">
@@ -128,8 +84,8 @@
                    cam-variable-name="FormField_secondApprover" type="text" readonly>
         </div>
         <div class="col-md-5">
-            <label for="FormField_SecondApprovalNotes"><span class="glyphicons glyphicons-comments"></span><b>Review
-                Comment</b></label>
+            <label for="FormField_SecondApprovalNotes"><span class="glyphicons glyphicons-comments"></span><strong>Review
+                Comment</strong></label>
             <div class="controls">
                     <textarea id="FormField_SecondApprovalNotes" name="FormField_SecondApprovalNotes"
                               cam-variable-type="String"
