--- a/src/main/resources/static/forms/cca/cca-ar-start.html
+++ b/src/main/resources/static/forms/cca/cca-ar-start.html
@@ -20,8 +20,8 @@
     <div class="row col-md-12" style="margin-top: 5px">
         <div class="col-md-6">
             <div class="form-group">
-                <label for="FormField_costCenter"><span class="glyphicon glyphicon-send"></span> <b>Cost
-                    Center</b></label>
+                <label for="FormField_costCenter"><span class="glyphicon glyphicon-send"></span> <strong>Cost
+                    Center</strong></label>
                 <div class="controls">
                     <input class="form-control" id="FormField_costCenter" name="FormField_costCenter"
                            cam-variable-type="String"
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="FormField_amount"><span class="glyphicon glyphicon-usd"></span> <b>Amount</b></label>
+                <label for="FormField_amount"><span class="glyphicon glyphicon-usd"></span> <strong>Amount</strong></label>
                 <div class="controls">
                     <input class="form-control" name="FormField_amount" id="FormField_amount"
                            cam-variable-type="Long"
@@ -44,15 +44,15 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="FormField_submittedBy"><span class="glyphicon glyphicon-user"></span> <b>Submitted
-                    By</b></label>
+                <label for="FormField_submittedBy"><span class="glyphicon glyphicon-user"></span> <strong>Submitted
+                    By</strong></label>
                 <div class="controls">
                     <input class="form-control" name="FormField_submittedBy" id="FormField_submittedBy"
                            cam-variable-type="String"
                            cam-variable-name="FormField_submittedBy" type="text" value="bob" readonly>
                 </div>
-                <label for="FormField_InvoiceName"><span class="glyphicon glyphicon-upload"></span> <b>Attach
-                    Invoice</b></label>
+                <label for="FormField_InvoiceName"><span class="glyphicon glyphicon-upload"></span> <strong>Attach
+                    Invoice</strong></label>
                 <div class="controls">
                     <div class="col-md-4">
                         <input class="form-control" name="FormField_InvoiceName" id="FormField_InvoiceName"
@@ -70,7 +70,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label for="FormField_description"><span class="glyphicon glyphicon-comment"></span>
-                    <b>Description</b></label>
+                    <strong>Description</strong></label>
                 <div class="controls">
                     <textarea class="form-control" cam-variable-type="String"
                               cam-variable-name="FormField_description" name="FormField_description"
