--- a/src/main/resources/static/forms/cca/cca-cco-rejection.html
+++ b/src/main/resources/static/forms/cca/cca-cco-rejection.html
@@ -28,11 +28,11 @@
         <div class="col-md-6">
 
             <ul class="list-group">
-                <li class="list-group-item"><span class="glyphicons glyphicons-user"></span> <b>Primary
-                    Approvaer: </b>
+                <li class="list-group-item"><span class="glyphicons glyphicons-user"></span> <strong>Primary
+                    Approvaer: </>
                     {{ primeApprover }}
                 </li>
-                <li class="list-group-item"><span class="glyphicons glyphicons-comments"></span> <b>Primary Notes: </b>
+                <li class="list-group-item"><span class="glyphicons glyphicons-comments"></span> <strong>Primary Notes: </strong>
                     {{ primeNotes }}
                 </li>
             </ul>
@@ -41,12 +41,12 @@
         <div class="col-md-6">
 
             <ul class="list-group">
-                <li class="list-group-item"><span class="glyphicons  glyphicons-user"></span> <b>Secondary
-                    Approval: </b>
+                <li class="list-group-item"><span class="glyphicons  glyphicons-user"></span> <strong>Secondary
+                    Approval: </strong>
                     {{ secondApprover }}
                 </li>
-                <li class="list-group-item"><span class="glyphicons glyphicons-comments"></span> <b>Secondary
-                    Notes: </b>
+                <li class="list-group-item"><span class="glyphicons glyphicons-comments"></span> <strong>Secondary
+                    Notes: </strong>
                     {{ secondNotes }}
                 </li>
             </ul>
@@ -55,8 +55,8 @@
     <div class="row" style="margin-top: 5px">
         <div class="col-md-5" style="margin-left: 5px">
             <div class="form-group">
-                <label for="FormField_costCenter"><span class="glyphicon glyphicon-send"></span> <b>Cost
-                    Center</b></label>
+                <label for="FormField_costCenter"><span class="glyphicon glyphicon-send"></span> <strong>Cost
+                    Center</strong></label>
                 <div class="controls">
                     <input class="form-control" id="FormField_costCenter" name="FormField_costCenter"
                            cam-variable-type="String"
@@ -66,7 +66,7 @@
             </div>
             <div class="form-group">
                 <label for="FormField_amount"><span class="glyphicon glyphicon-usd"></span>
-                    <b>Amount</b></label>
+                    <strong>Amount</strong></label>
                 <div class="controls">
                     <div class="controls">
                         <input class="form-control" name="FormField_amount" id="FormField_amount"
@@ -81,15 +81,15 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="FormField_submittedBy"><span class="glyphicon glyphicon-user"></span> <b>Submitted
-                        By</b></label>
+                    <label for="FormField_submittedBy"><span class="glyphicon glyphicon-user"></span> <strong>Submitted
+                        By</strong></label>
                     <div class="controls">
                         <input class="form-control" name="FormField_submittedBy" id="FormField_submittedBy"
                                cam-variable-type="String"
                                cam-variable-name="FormField_submittedBy" type="text" readonly>
                     </div>
-                    <label for="FormField_InvoiceName"><span class="glyphicon glyphicon-upload"></span> <b>Attach
-                        Invoice</b></label>
+                    <label for="FormField_InvoiceName"><span class="glyphicon glyphicon-upload"></span> <strong>Attach
+                        Invoice</strong></label>
                     <div class="controls">
                         <div class="col-md-4">
                             <input class="form-control" name="FormField_InvoiceName" id="FormField_InvoiceName"
@@ -109,7 +109,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label for="FormField_description"><span class="glyphicon glyphicon-comment"></span>
-                    <b>Description</b></label>
+                    <strong>Description</strong></label>
                 <div class="controls">
                     <textarea class="form-control" cam-variable-type="String"
                               cam-variable-name="FormField_description" name="FormField_description"
